# LLM-Inference-Tool

./: README.md
ai-note-helper/: main.py  requirements.txt
notes/: ai-note-helper.md  week1_linux_basic.md  week2.md  week3.md  week4.md  week5.md
week02/: CMakeLists.txt  client.c  epoll_server.c  select_server.c  server.c
week03/: week03_mysql_complete.sql
week04/: CMakeLists.txt  mysql_login.cpp
week05/: aliyun_chat_api.py  pratice.py
